--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -44,77 +44,9 @@ html(lang="en")
             option.country__option(value="oceania") Oceania
     
     main.container.section
-      .card__container
-        .card
-          .card__image: img(
-            src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.accesscal.org%2Fwp-content%2Fuploads%2F2016%2F09%2Famerican-flag-7.jpg&f=1&nofb=1",
-            alt="flag"
-          )
-          .card__body
-            h2.card__title United States
-            .card__content
-              p 
-                span.text--semibold Population: 
-                |323,947,000
-              p 
-                span.text--semibold Region: 
-                |America
-              p 
-                span.text--semibold Capital: 
-                |Washington, D.C.
-        .card
-           .card__image: img(
-             src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.accesscal.org%2Fwp-content%2Fuploads%2F2016%2F09%2Famerican-flag-7.jpg&f=1&nofb=1",
-             alt="flag"
-           )
-           .card__body
-             h2.card__title United States
-             .card__content
-               p 
-                 span.text--semibold Population: 
-                 |323,947,000
-               p 
-                 span.text--semibold Region: 
-                 |America
-               p 
-                 span.text--semibold Capital: 
-                 |Washington, D.C.
-        .card
-            .card__image: img(
-              src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.accesscal.org%2Fwp-content%2Fuploads%2F2016%2F09%2Famerican-flag-7.jpg&f=1&nofb=1",
-              alt="flag"
-            )
-            .card__body
-              h2.card__title United States
-              .card__content
-                p 
-                  span.text--semibold Population: 
-                  |323,947,000
-                p 
-                  span.text--semibold Region: 
-                  |America
-                p 
-                  span.text--semibold Capital: 
-                  |Washington, D.C.
-        .card
-            .card__image: img(
-              src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.accesscal.org%2Fwp-content%2Fuploads%2F2016%2F09%2Famerican-flag-7.jpg&f=1&nofb=1",
-              alt="flag"
-            )
-            .card__body
-              h2.card__title United States
-              .card__content
-                p 
-                  span.text--semibold Population: 
-                  |323,947,000
-                p 
-                  span.text--semibold Region: 
-                  |America
-                p 
-                  span.text--semibold Capital: 
-                  |Washington, D.C.
+      section.card__container
 
     script(src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js")
-    script(src="js/scripts-min.js")
+    script(src="js/script-min.js")
 
       
