--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -198,10 +198,15 @@ select {
 }
 
 // Card
-@media (min-width: 768px) {
-	.card__container {
-		display: flex;
-		justify-content: space-between;
+.card__container {
+	@media (min-width: 768px) {
+		display: grid;
+		gap: 4rem 2rem;
+		grid-template-columns: repeat(4, 1fr);
+	}
+
+	@media (min-width: 1445px) {
+		gap: 4rem;
 	}
 }
 
@@ -214,15 +219,20 @@ select {
 	box-shadow: 8px 8px 20px -10px;
 
 	@media (min-width: 768px) {
-		margin: 2rem 0;
-
-		flex: 0 0 calc(25% - 2rem);
+		margin: 0;
 	}
 }
 .card__image {
+	height: 13rem;
+	max-height: 13rem;
 	img {
 		border-radius: 0.5rem 0.5rem 0 0;
+		width: 100%;
+		height: 100%;
 		max-width: 100%;
+		max-height: 100%;
+
+		object-fit: cover;
 	}
 }
 .card__title {
