--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -39,12 +39,11 @@ html(lang="en")
           select.country__selected(name="countries") 
             option.country__option(value="default", selected, disabled) Filter by Region
             option.country__option(value="africa") Africa
-            option.country__option(value="america") America
+            option.country__option(value="americas") America
             option.country__option(value="europe") Europe
             option.country__option(value="oceania") Oceania
     
-    main.container.section
-      section.card__container
+    main#main-content.container.section
 
     script(src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js")
     script(src="js/script-min.js")
