--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -20,10 +20,7 @@ html(lang="en")
 
   body
     header
-      nav.navbar
-        .navbar__content
-          h1 Where in the world?
-          button.button--fab(type="button"): i.fas.fa-moon
+      include ../templates/navbar.pug
       
       .container.filter__container
         .search__container
