--- a/src/views/templates/navbar.pug
+++ b/src/views/templates/navbar.pug
@@ -1,4 +1,4 @@
 nav.navbar
   .navbar__content
     h1 Where in the world?
-    button.button--fab(type="button"): i.fas.fa-moon
+    button.button.button--fab(type="button"): i.fas.fa-moon
