--- a/src/views/pages/details.pug
+++ b/src/views/pages/details.pug
@@ -1,9 +1,27 @@
 doctype
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
+  include ../templates/head.pug
   body
     header
       include ../templates/navbar.pug
+
+      .container
+        button.button.button--back(type="button")
+          i.fas.fa-arrow-left
+          |Back
+    
+    main.container.section
+      .detail
+        .detail__image: img(src="https://restcountries.eu/data/bel.svg", alt="flag")
+        .detail__body
+          h2.detail__title Belgium
+          .detail__content
+            p
+              span.text--semibold Native Name: 
+              |Belgie
+          .detail__footer
+            h3.detail__footer-title Border Countries:
+            .detail__border
+              button.button(type="button") France
+              button.button(type="button") France
+              button.button(type="button") France
