--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,22 +1,6 @@
 doctype
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Country API
-
-    // Fonts
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap")
-    link(
-      rel="stylesheet",
-      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css",
-      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp",
-      crossorigin="anonymous"
-    )
-
-    // Styles
-    link(rel="stylesheet", href="https://necolas.github.io/normalize.css/8.0.1/normalize.css")
-    link(rel="stylesheet", href="css/styles.css")
+  include ../templates/head.pug
 
   body
     header
@@ -29,8 +13,8 @@ html(lang="en")
             name="search",
             placeholder="Search for a country..."
           )
-          button.button--fab(type="button")
-            ion-icon(name="search")
+          button.button.button--fab(type="button")
+            ion-icon(name="search") 
 
         .country__options
           select.country__selected(name="countries") 
